--- a/host/Makefile
+++ b/host/Makefile
@@ -3,12 +3,12 @@ CFLAGS_HOST+=-Wall -Wextra -Wno-unused-parameter -Werror -g -O2 \
 	-DVERSION=\"$(shell git describe --all)\"
 LDFLAGS_HOST+=
 
-all: memtrace-fs
+all: memtrace-server
 
 install:
-	install -m 0755 memtrace-fs /usr/bin/
+	install -m 0755 memtrace-server /usr/bin/
 
-memtrace-fs: memtrace-fs.o net.o strlist.o fs.o elf.o elf_file.o process.o addr2line.o gdb.o log.o
+memtrace-server: memtrace-server.o evlp.o bus.o net.o strmap.o strlist.o elf.o elf_file.o process.o addr2line.o gdb.o log.o
 	$(CC_HOST) -o $(@) $(^) $(LDFLAGS_HOST)
 
 -include $(OBJECTS:.o=.d)
@@ -17,7 +17,7 @@ memtrace-fs: memtrace-fs.o net.o strlist.o fs.o elf.o elf_file.o process.o addr2
 	$(CC_HOST) -c -MD $(CFLAGS_HOST) $(<) -o $(@)
 
 clean:
-	rm -f memtrace-fs *.o *.d
+	rm -f memtrace-server *.o *.d
 
 .PHONY: all install clean
 
