Ensure memtrace can be built for multiple targets at the same time

--- a/Makefile.host
+++ b/Makefile.host
@@ -1,24 +1,29 @@
+BUILDHOST?=build-host
+BUILD?=$(BUILDHOST)
 CC_HOST?=cc
 CFLAGS_HOST+=-Wall -Wextra -Wno-unused-parameter -Werror -g -O2 \
-	-I../include \
+	-Iinclude \
 	-DVERSION=\"$(shell git describe --all)\"
 LDFLAGS_HOST+=
 
-all: memtrace-server
+all: $(BUILD)/memtrace-server
+
+$(BUILD)/:
+	mkdir -p $(BUILD)/
 
 install:
 	install -m 0755 memtrace-server /usr/bin/
 
-memtrace-server: memtrace-server.o evlp.o bus.o net.o strmap.o strlist.o elf.o elf_file.o process.o addr2line.o gdb.o log.o
+$(BUILD)/memtrace-server: $(addprefix $(BUILD)/,memtrace-server.o evlp.o bus.o net.o strmap.o strlist.o elf.o elf_file.o process.o addr2line.o gdb.o log.o)
 	$(CC_HOST) -o $(@) $(^) $(LDFLAGS_HOST)
 
 -include $(OBJECTS:.o=.d)
 
-%.o: ../src/%.c
+$(BUILD)/%.o: src/%.c | $(BUILD)/
 	$(CC_HOST) -c -MD $(CFLAGS_HOST) $(<) -o $(@)
 
 clean:
-	rm -f memtrace-server *.o *.d
+	rm -rf $(BUILD)
 
 .PHONY: all install clean
 
