--- a/Makefile.host
+++ b/Makefile.host
@@ -2,6 +2,7 @@ BUILDHOST?=build-host
 BUILD?=$(BUILDHOST)
 CC_HOST?=cc
 CFLAGS_HOST+=-Wall -Wextra -Wno-unused-parameter -Werror -g -O2 \
+	-D_DEFAULT_SOURCE -D_GNU_SOURCE \
 	-Iinclude \
 	-DVERSION=\"$(shell git describe --all)\"
 LDFLAGS_HOST+=
