Missing -pthread option in Makefile.host

--- a/Makefile.host
+++ b/Makefile.host
@@ -1,11 +1,11 @@
 BUILDHOST?=build-host
 BUILD?=$(BUILDHOST)
 CC_HOST?=cc
-CFLAGS_HOST+=-Wall -Wextra -Wno-unused-parameter -Werror -g -O2 \
+CFLAGS_HOST+=-Wall -Wextra -Wno-unused-parameter -Werror -g -O2 -pthread \
 	-D_DEFAULT_SOURCE -D_GNU_SOURCE \
 	-Iinclude \
 	-DVERSION=\"$(shell git describe --all)\"
-LDFLAGS_HOST+=
+LDFLAGS_HOST+=-pthread
 
 all: $(BUILD)/memtrace-server
 
