--- a/Makefile.target
+++ b/Makefile.target
@@ -10,7 +10,7 @@ CFLAGS+=-g -O2 -fPIC -pthread \
 	-Wno-unused-parameter \
 	-Wno-missing-field-initializers \
 	-Wno-missing-braces \
-	-D_DEFAULT_SOURCE -D_GNU_SOURCE -std=gnu99 \
+	-D_DEFAULT_SOURCE -D_GNU_SOURCE -D_LARGEFILE64_SOURCE -std=gnu99 \
 	-Iinclude \
 	-DVERSION=\"$(GIT_VERSION)\" \
 	-DSYSROOT=\"$(CC_SYSROOT)\" \
