--- a/Makefile.target
+++ b/Makefile.target
@@ -58,7 +58,7 @@ $(O)/:
 	mkdir -p $(O)/
 
 $(O)/memtrace: $(addprefix $(O)/,memtrace.o threads.o evlp.o bus.o net.o strlist.o strmap.o inject.o syscall.o syscall_table.o ptrace.o hashmap.o libraries.o log.o elf.o elf_file.o elf_sym.o elf_relocate.o elf_dynamic.o console.o coredump.o breakpoint.o memfd.o selftest.o process.o symcache.o apparmor.o $(ARCH_OBJECT))
-	$(CC) -o $(@) $(^) $(LDFLAGS)
+	$(CC) -o $(@) $(^) -ldl $(LDFLAGS)
 
 $(O)/libmemtrace-agent.so: $(addprefix $(O)/,agent.o agent_hooks.o threads.o evlp.o bus.o net.o strlist.o strmap.o inject.o syscall.o syscall_table.o ptrace.o hashmap.o libraries.o log.o elf.o elf_file.o elf_sym.o elf_relocate.o elf_dynamic.o console.o coredump.o memfd.o symcache.o $(ARCH_OBJECT))
 	$(CC) -shared -o $(@) $(^) $(LDFLAGS)
