--- a/Makefile.target
+++ b/Makefile.target
@@ -54,6 +54,10 @@ install:
 	install -m 755 $(O)/libmemtrace-agent.so $(DESTDIR)/usr/lib
 	install -m 755 scripts/memtrace-endurance $(DESTDIR)/usr/bin
 
+test: all
+	$(O)/memtrace --selftest
+
+
 $(O)/:
 	mkdir -p $(O)/
 
